2008-12-31  Ralf Juengling  <juenglin@cs.pdx.edu>

	* src/gp_types.h: Fix duplicate plot style indices for 
	RGBA_IMAGE and CIRCLES.

2008-12-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Allow further options to modify a line style.
	E.g.  plot ... with points ls 1 ps variable

2008-12-27  Allin Cottrell  <cottrell@wfu.edu>

	* util.c (gprintf): Allow '#' format character.

2008-12-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc docs/Makefile.in term/lua.trm: Various fixes.

2008-12-26  Ethan Merritt  <merritt@u.washington.edu>

	* term/mac.trm: extra spaces are messing up the documentation..

	* src/graphics.c (boundary) color.c (draw_color_smooth_box):
	Clean up border placement code, fix colorbox bug.

2008-12-24  Mike Sutton  <mws115@usa.com>

	* term/x11.trm src/gplt_x11.c: Added size and position options for X11.

2008-12-23  Ethan Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in demo/all.dem src/Makefile.am:
	Clean up autoconf dependencies for lua terminal and for demos.

2008-12-21  Peter Hedwig  <peter@affenbande.org>

	* configure.in src/Makefile.am src/term.h term/Makefile.am.in
	term/lua/ChangeLog term/lua/gnuplot.lua term/lua/gnuplot-lua-tikz.sty
	term/lua/INSTALL term/lua/NEWS term/lua/README term/lua/TODO:

	Generic Lua terminal with PGF/TikZ support.
	The current implementation supports output via TikZ/pdflatex:
		set term lua standalone
		set output 'plot.tex'
		plot foo
		unset output
		!pdflatex plot

2008-12-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version) term/x11.trm (parse_driver):
	Do not overwrite the environmental variable GNUPLOT_DRIVER_DIR.

2008-12-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h:  More work on "set view equal {xy|xyz}'.
	It now works well for terminals with isotropic coordinate systems, but 
	unfortunately not for x11 or windows.

2008-12-13  Ethan Merritt  <merritt@u.washington.edu>
